2021-02-16  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (HTMLdecode): change order of
        named references so that "&not" (without ;) is
        matched last. See bug report by Fangzhou Xie at
        https://github.com/enricoschumann/textutils/issues/3

2020-08-24  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (toHTML.data.frame): fix
        handling of one-row data frames
        (toHTML.data.frame): new argument 'col.names',
        with default TRUE. If FALSE, column names of
        data frame are ignored
        (toHTML.data.frame): 'row.names' may now be
        either logical (as before) or a string, which
        is then used as column name

2019-12-30  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.2-0

        * R/functions.R (HTMLdecode): also decode
        decimal and hexadecimal character references,
        controlled by new arguments 'named', 'hex' and
        'decimal'
        (HTMLencode): new argument 'encode.only', to
        restrict characters to be encoded

2019-11-13  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (here): fixed -- argument
        'trim' was ignored for character vectors

2019-08-23  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Imports): add tinytest,
        remove RUnit

2019-06-04  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Suggests): add RUnit

2019-05-01  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.1-11

        * R/functions.R (here): explicitly close text
        connection (which otherwise would be
        garbage-collected anyway)

2019-03-27  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (HTMLencode): new argument
        'use.iconv': if TRUE, use 'iconv' to convert
        input to UTF-8 encoded string

2019-03-21  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (HTMLencode): fix regular